Small Aesthetic fix - Horizontal Overflow

--- a/static/css/HomePage.css
+++ b/static/css/HomePage.css
@@ -11,6 +11,8 @@ body {
 	font-size: 100%;
 	color:#04356b;
 	font-family: "PT serif", serif;
+
+	overflow-x: hidden; /* To deal with some over on the right on the screen */
 }
 
 /* -------------------- CORE -------------------- */
